[package]
name = "speciale"
version = "0.2.0"
edition = "2024"
authors = ["Cupnfish <cupnfish@icloud.com>"]
description = "MCP server for DeepSeek-V3.2-Speciale reasoning model"
repository = "https://github.com/Cupnfish/speciale"
license = "MIT"
keywords = ["mcp", "deepseek", "ai", "reasoning"]
categories = ["command-line-utilities"]

[dependencies]
rmcp = { version = "0.10", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
uuid = { version = "1", features = ["v4"] }
duckdb = { version = "1.3", features = ["bundled"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
